# vk-fixer

./: .gitignore  Cargo.toml  README.md  multiple-layers-manifest.json  single-layer-manifest.json
definitions/src/: lib.rs
gui/: Cargo.toml
gui/src/: main.rs
registry/: Cargo.toml
registry/src/: lib.rs
src/: definitions.rs  gui.rs  logic.rs  main.rs  registry.rs  test_app.rs
