[package]
name = "vk-fixer"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = "*"
nwd = { version = "*", package = "native-windows-derive" }
nwg = { version = "*", package = "native-windows-gui" }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
windows = { version = "*", features = ["Win32_Foundation", "Win32_System_Registry"] }

[profile.release]
opt-level = 'z' # Optimize for size
