[package]
name = "registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
definitions = { path="../definitions" }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"

[dependencies.windows]
version = "0.51.1"
features = [
    "Win32_Foundation",
    "Win32_System_Registry"
]
